--- a/styles.css
+++ b/styles.css
@@ -116,7 +116,7 @@
     gap: .8rem;
     padding: 1rem;
     border-radius: 0.5rem;
-    height: 400px;
+    height: 320px;
     width: 100%;
     border: 1px solid white;
     
@@ -142,7 +142,7 @@
 
 .conteiner__store__card img{
     width: 100%;
-    height: 250px;
+    height: 200px;
     border-radius: 1rem;
     
 }
@@ -346,20 +346,20 @@
     }
 
     .conteiner__top-sellers img{
-        width: 500px;
-        height: 500px;
+        width: 300px;
+        height: 300px;
     }
     .aside__cart{
         background-color:var(--color);
-        width: 30%;
+        width: 40%;
         text-align: center;
         z-index: 2000;
         
     }   
 
-    .aside__cart-body{
-        overflow-y: scroll;
-        
+    .aside__cart-body::-webkit-scrollbar-thumb {
+        background: #ccc;
+        border-radius: 4px;
     }
 
     .nav__shop-item {
@@ -371,3 +371,4 @@
         height: 200px;
     }
 }
+    
